# pmd5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pmd5.plib.c
doc/: index.js  light_simple.css  pmd5.plib.html  tema_dark.css  tema_padrao.css  temas_itens.json
exemplos/: exemplo_meta.prisma  filecut.prisma  hmac.prisma  hmac2.prisma  z_teste.prisma  z_teste2atualize.prisma
include/: lualib.h  md5.h  prisma.h  prisma_util.h  prismalib.h
lib_src/: compila.sh  pmd5.c
lib_src/prisma/: lauxlib.h  lua.h  luaconf.h
scripts/: plibc
